# specforge

./: .gitignore  README.md  pyproject.toml
examples/payloads/: example_invalid.json  example_valid.json
examples/specs/: example.yaml  import_csv_sample.csv  import_csv_sample.expected.yaml  import_excel_sample.expected.yaml  import_excel_sample.xlsx
src/specforge/: cli.py
src/specforge/adapters/: __init__.py  csv_importer.py  csv_mapper.py  csv_schema.py  excel_importer.py
src/specforge/engine/: differ.py  mocker.py  validator.py
src/specforge/models/: __init__.py  result.py  spec.py
src/specforge/parsers/: json_parser.py  yaml_parser.py
src/specforge/reporters/: console.py  json_reporter.py  markdown_reporter.py
tests/: conftest.py  test_cli.py  test_cli_flags.py  test_csv_importer.py  test_diff_cli.py  test_differ.py  test_excel_importer.py  test_import_csv_cli.py  test_import_excel_cli.py  test_mock_cli.py  test_mocker.py  test_reporters_diff.py  test_security.py  test_validator.py
