[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specforge"
version = "0.1.0"
description = "CLI toolkit for validating, mocking, and diffing API specs"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "ruamel.yaml>=0.18.0",
]

[project.scripts]
specforge = "specforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/specforge"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
