[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specforge-cli"
version = "0.1.4"
description = "CLI toolkit for validating, mocking, and diffing API specs"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Jomkrit Santiyukwong" },
]
maintainers = [
    { name = "Jomkrit Santiyukwong" },
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "ruamel.yaml>=0.18.0",
    "faker>=26.0",
    "openpyxl>=3.1.0",
    "regex>=2024.5.15",
]

[project.scripts]
specforge = "specforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/specforge"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
